--- a/_includes/dc/intro.html
+++ b/_includes/dc/intro.html
@@ -1,18 +1,15 @@
 <p>
-  <a href="{{site.dc_site}}">Data Carpentry</a>
-  aims to help researchers get their work done
-  in less time and with less pain
-  by teaching them basic research computing skills.
-  This hands-on workshop will cover basic concepts and tools,
-  including program design, version control, data management,
-  and task automation.
-  Participants will be encouraged to help one another
-  and to apply what they have learned to their own research problems.
+  Python is rapidly emerging as the programming language of choice
+  for data analysis in the weather, climate and ocean sciences.
+  By consulting online tutorials and help pages,
+  most researchers in this community are able to pick up the basic syntax
+  and programming constructs (e.g. loops, lists and conditionals).
+  This self-taught knowledge is sufficient to get work done, 
+  but it often involves spending hours to do things that should take minutes, 
+  reinventing a lot of wheels, and a nagging uncertainty at the end of it all 
+  regarding the reliability and reproducibility of the results. 
+  To help address these issues, this <a href="{{site.dc_site}}">Data Carpentry</a> workshop 
+  will cover a suite of programming best practices that aren’t so easy to glean 
+  from a quick Google search.
 </p>
-<p align="center">
-  <em>
-    For more information on what we teach and why,
-    please see our paper
-    "<a href="http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001745">Best Practices for Scientific Computing</a>".
-  </em>
-</p>
+
