--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -1,17 +1,15 @@
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr><td>Morning</td> <td> <a href=http://www.datacarpentry.org/spreadsheet-ecology-lesson/>Data organization in spreadsheets</a></td></tr>
-      <tr><td> </td><td><a href=http://www.datacarpentry.org/OpenRefine-ecology-lesson/>OpenRefine for data cleaning</a></td></tr>
-      <tr><td>Afternoon</td><td><a href=http://www.datacarpentry.org/R-ecology-lesson/>Introduction to R</a></td></tr>
+      <tr><td>09:00-10:30</td> <td>Software installation using conda; functions and modular code</td></tr>
+      <tr><td>10:30-11:00</td> <td>Morning tea (provided)</td></tr>
+      <tr><td>11:00-12:30</td> <td><Testing and defensive programming</td></tr>
+      <tr><td>12:30-01:30</td> <td>Lunch (not provided)</td></tr>
+      <tr><td>01:30-03:00</td> <td>Command line programs; version control using git</td></tr>
+      <tr><td>03:00-03:30</td> <td>Afternoon tea (provided)</td></tr>
+      <tr><td>03:30-04:30</td> <td>Data provenance</td></tr>
     </table>
   </div>
   <div class="col-md-6">
-    <h3>Day 2</h3>
-    <table class="table table-striped">
-      <tr> <td>Morning</td> <td><a href=http://www.datacarpentry.org/R-ecology-lesson/>Continuation of R: data analysis & visualization</a></td></tr>
-      <tr> <td>Afternoon</td><td><a href=http://www.datacarpentry.org/sql-ecology-lesson/>Data management with SQL</a></td></tr>
-    </table>
   </div>
 </div>
