--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -1,15 +1,18 @@
 <div class="row">
   <div class="col-md-6">
     <table class="table table-striped">
-      <tr><td>09:00-10:30</td> <td>Software installation using conda; functions and modular code</td></tr>
+      <tr><td>09:00-10:30</td> <td>PyAOS software stack, software installation using conda, data visualisation</td></tr>
       <tr><td>10:30-11:00</td> <td>Morning tea (provided)</td></tr>
-      <tr><td>11:00-12:30</td> <td>Testing and defensive programming</td></tr>
+      <tr><td>11:00-12:30</td> <td>Functions, command line programs</td></tr>
       <tr><td>12:30-01:30</td> <td>Lunch (not provided)</td></tr>
-      <tr><td>01:30-03:00</td> <td>Command line programs; version control using git</td></tr>
+      <tr><td>01:30-03:00</td> <td>Version control using Git and GitHub, vectorisation</td></tr>
       <tr><td>03:00-03:30</td> <td>Afternoon tea (provided)</td></tr>
-      <tr><td>03:30-04:30</td> <td>Data provenance</td></tr>
+      <tr><td>03:30-05:00</td> <td>Defensive programming, data provenance</td></tr>
     </table>
   </div>
   <div class="col-md-6">
   </div>
 </div>
+<p>
+<a href="https://damienirving.github.io/pyaos-lesson/">Lesson notes</a>
+</p>
