Updated link to lesson notes

--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -1,5 +1,5 @@
 <p>
-<a href="https://damienirving.github.io/pyaos-lesson/">Lesson notes</a>
+<a href="https://data-lessons.github.io/python-aos-lesson/">Lesson notes</a>
 </p>
 <div class="row">
   <div class="col-md-9">
